--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Colorful Mini Chat App</title>
+    <title>Mini Chat App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <h1>Mini Chat App</h1>
 
-<div class="chat-container" id="chatContainer">
-    <!-- Chat messages appear here -->
-</div>
+<!-- Chat messages appear here -->
+<div class="chat-container" id="chatContainer"></div>
 
+<!-- Input area -->
 <div class="input-container">
     <input type="text" id="messageInput" placeholder="Type your message...">
-    <button onclick="sendMessage()">Send</button>
+    <button id="sendBtn">Send</button>
 </div>
 
+<!-- Link to JS -->
 <script src="script.js"></script>
 </body>
 </html>
